# agno_finance_agent

./: .dockerignore  .env  README.md  agents.db  cache.pkl  dockerfile  financial_analysis.py  main.py  pyproject.toml  requirements.txt
tmp/: data.db
